--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23090" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HoQ-jy-glR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HoQ-jy-glR">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23079"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="UIMenu" message="Requires Xcode 11 or later." minToolsVersion="11.0" requiredIntegratedClassName="UICommandDiff"/>
@@ -20,14 +20,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="project" id="71M-M2-Fer" customClass="ProjectsTableViewCell" customModule="Zedit" customModuleProvider="target">
-                                <rect key="frame" x="20" y="55.333332061767578" width="353" height="43.333332061767578"/>
+                                <rect key="frame" x="20" y="55.333332061767578" width="353" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="71M-M2-Fer" id="Kpv-LC-8tS">
-                                    <rect key="frame" x="0.0" y="0.0" width="353" height="43.333332061767578"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="353" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHv-zq-cQ6">
-                                            <rect key="frame" x="20" y="10.999999999999998" width="313" height="21.333333333333329"/>
+                                            <rect key="frame" x="20" y="11.000000000000002" width="313" height="21.666666666666671"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -686,7 +686,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Generate Clips"/>
                                         <connections>
-                                            <segue destination="deM-vT-UcJ" kind="unwind" identifier="update" unwindAction="myUnwindActionWithUnwindSegue:" id="fFh-yQ-HLd"/>
+                                            <segue destination="M9y-zR-ibE" kind="presentation" identifier="preview" id="Tto-ui-1De"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -718,6 +718,117 @@
                 <exit id="deM-vT-UcJ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="4251" y="873"/>
+        </scene>
+        <!--Trim Video Preview View Controller-->
+        <scene sceneID="ZRR-xq-iG7">
+            <objects>
+                <viewController id="M9y-zR-ibE" customClass="TrimVideoPreviewViewController" customModule="Zedit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dGk-Kc-91A">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="44a-yj-6xF">
+                                <rect key="frame" x="0.0" y="10" width="393" height="822"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" verticalHuggingPriority="253" translatesAutoresizingMaskIntoConstraints="NO" id="kf6-vn-R3b">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="300"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="300" id="n09-8K-fLK"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Generated Clips" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="73k-Xx-PyW">
+                                        <rect key="frame" x="0.0" y="300" width="393" height="31.333333333333314"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="keS-mv-eKz">
+                                        <rect key="frame" x="0.0" y="331.33333333333326" width="393" height="470.66666666666674"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NwK-QK-Bqq">
+                                                <rect key="frame" x="96" y="9" width="393" height="200"/>
+                                                <subviews>
+                                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="252" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="els-CO-a82" customClass="TrimVideoPreviewCollectionView" customModule="Zedit" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="ezf-b5-jJ3"/>
+                                                        </constraints>
+                                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dma-bE-CUf">
+                                                            <size key="itemSize" width="128" height="128"/>
+                                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                        </collectionViewFlowLayout>
+                                                        <cells>
+                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="trimVideoCell" id="UMe-qj-u4c" customClass="TrimVideoPreviewCollectionViewCell" customModule="Zedit" customModuleProvider="target">
+                                                                <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zEr-VO-hp8">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                                                    <autoresizingMask key="autoresizingMask"/>
+                                                                </collectionViewCellContentView>
+                                                            </collectionViewCell>
+                                                        </cells>
+                                                    </collectionView>
+                                                </subviews>
+                                                <color key="tintColor" systemColor="linkColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="els-CO-a82" firstAttribute="leading" secondItem="NwK-QK-Bqq" secondAttribute="leading" id="1mh-Of-ZHM"/>
+                                                    <constraint firstAttribute="trailing" secondItem="els-CO-a82" secondAttribute="trailing" id="NBm-Js-VDa"/>
+                                                    <constraint firstAttribute="bottom" secondItem="els-CO-a82" secondAttribute="bottom" id="RNr-xs-rKH"/>
+                                                    <constraint firstAttribute="height" constant="200" id="YBW-4O-0b2"/>
+                                                    <constraint firstAttribute="width" constant="393" id="ZuK-1q-9gY"/>
+                                                    <constraint firstItem="els-CO-a82" firstAttribute="top" secondItem="NwK-QK-Bqq" secondAttribute="top" id="s7K-rK-lBB"/>
+                                                </constraints>
+                                            </stackView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="NwK-QK-Bqq" secondAttribute="bottom" constant="-81" id="4j9-Mz-y1G"/>
+                                            <constraint firstItem="NwK-QK-Bqq" firstAttribute="leading" secondItem="gsC-e0-aNk" secondAttribute="leading" constant="96" id="TRL-ij-i4n"/>
+                                            <constraint firstItem="NwK-QK-Bqq" firstAttribute="top" secondItem="gsC-e0-aNk" secondAttribute="top" constant="9" id="dgc-XA-czo"/>
+                                            <constraint firstAttribute="trailing" secondItem="NwK-QK-Bqq" secondAttribute="trailing" constant="-96" id="e8A-en-BkT"/>
+                                        </constraints>
+                                        <viewLayoutGuide key="contentLayoutGuide" id="sFt-pR-WbL"/>
+                                        <viewLayoutGuide key="frameLayoutGuide" id="gsC-e0-aNk"/>
+                                    </scrollView>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="800" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nub-nH-pTU">
+                                        <rect key="frame" x="0.0" y="802" width="393" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="AZB-mh-qez"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Finish"/>
+                                        <connections>
+                                            <segue destination="kRb-Nx-sD7" kind="unwind" unwindAction="myUnwindActionWithUnwindSegue:" id="1l5-fn-ncZ"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="keS-mv-eKz" firstAttribute="leading" secondItem="44a-yj-6xF" secondAttribute="leading" id="2dF-TZ-HeP"/>
+                                    <constraint firstAttribute="bottom" secondItem="nub-nH-pTU" secondAttribute="bottom" id="DwY-1I-6VQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="keS-mv-eKz" secondAttribute="trailing" id="R5Z-Av-E1A"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="zI9-bz-0yq"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zI9-bz-0yq" firstAttribute="trailing" secondItem="44a-yj-6xF" secondAttribute="trailing" id="8Cm-qM-Qfz"/>
+                            <constraint firstItem="44a-yj-6xF" firstAttribute="leading" secondItem="zI9-bz-0yq" secondAttribute="leading" id="aaI-dC-nra"/>
+                            <constraint firstItem="zI9-bz-0yq" firstAttribute="bottom" secondItem="44a-yj-6xF" secondAttribute="bottom" constant="10" id="peb-uv-7Nr"/>
+                            <constraint firstItem="44a-yj-6xF" firstAttribute="top" secondItem="zI9-bz-0yq" secondAttribute="top" constant="10" id="pff-It-gnX"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="videoPlayerView" destination="kf6-vn-R3b" id="boR-cK-wE9"/>
+                        <outlet property="vidoListCollectionView" destination="els-CO-a82" id="O77-Hi-ixA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rgP-1i-Lh5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="kRb-Nx-sD7" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="5451" y="926"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="k56-Ub-EUV">
@@ -755,20 +866,23 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray3Color">
-            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
